@@ -8071,53 +8071,93 @@ name|KeeperException
 throws|,
 name|InterruptedException
 block|{
-name|Map
+name|NamedList
 argument_list|<
-name|String
-argument_list|,
 name|Object
 argument_list|>
-name|props
+name|results
 init|=
-name|ZkNodeProps
+operator|new
+name|NamedList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|collections
+init|=
+name|coreContainer
 operator|.
-name|makeMap
-argument_list|(
-name|Overseer
-operator|.
-name|QUEUE_OPERATION
-argument_list|,
-name|CollectionAction
-operator|.
-name|LIST
-operator|.
-name|toString
+name|getZkController
 argument_list|()
 operator|.
-name|toLowerCase
-argument_list|(
-name|Locale
+name|getZkStateReader
+argument_list|()
 operator|.
-name|ROOT
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollections
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|collectionList
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|collection
+range|:
+name|collections
+control|)
+block|{
+name|collectionList
+operator|.
+name|add
+argument_list|(
+name|collection
 argument_list|)
+expr_stmt|;
+block|}
+name|results
+operator|.
+name|add
+argument_list|(
+literal|"collections"
+argument_list|,
+name|collectionList
+argument_list|)
+expr_stmt|;
+name|SolrResponse
+name|response
+init|=
+operator|new
+name|OverseerSolrResponse
+argument_list|(
+name|results
 argument_list|)
 decl_stmt|;
-name|handleResponse
-argument_list|(
-name|CollectionAction
-operator|.
-name|LIST
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-operator|new
-name|ZkNodeProps
-argument_list|(
-name|props
-argument_list|)
-argument_list|,
 name|rsp
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|addAll
+argument_list|(
+name|response
+operator|.
+name|getResponse
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
